Fixed sidebar issues. Soem refactor in other compoents to align with css module styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -90,195 +90,6 @@
   left: 0;
 }
 
-/* sidebar */
-#sidebar{
-  font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
-}
-
-#sidebar a{
-  text-decoration: none;
-  transition: all 300ms ease;
-}
-
-#sidebar .sidebar-menu {
-  position: fixed;
-  z-index: 2;
-  top: 80px;
-  width: 260px;
-  height: calc(100vh - 80px);
-  background: var(--white);
-  overflow-y: auto;
-  border-right: 1px solid var(--white-color);
-}
-
-#sidebar #spec-sidebar {
-  padding-bottom: 100px;
-}
-#sidebar .sidebar-list li.list-title {
-  font-weight: bold;
-  color: var(--dark-shade-grey);
-  font-size: 16px;
-}
-#sidebar .sidebar-list li.spec.list-title {
-  padding-left: 1.8rem;
-}
-#sidebar .sidebar-list {
-  padding: 0;
-  margin-top: 2rem;
-  background-color: var(--white);
-}
-#sidebar .sidebar-list.info {
-  padding-left: 1.8rem;
-}
-#sidebar .filter-container input{
-  width: 200px;
-  height: 32px;
-  font-size: 15px;
-  padding-left: 10px;
-  margin: 10px 0 16px 1.8rem;
-}
-
-.sidebar-list ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-.sidebar-list .method{
-  border-radius: 3px;
-  margin-left: 0.4rem;
-  padding: 0.4rem 0 0.5rem 1.6rem;
-}
-.sidebar-list .method:hover {
-  background-color: rgba(237, 30, 30, 0.12);
-}
-.sidebar-list .method a {
-  cursor: pointer;
-  position: relative;
-  padding-left: 8px;
-}
-.sidebar-list ul li {
-  padding: 0.3rem 0.2rem 0.3rem 0;
-  font-size: 14px;
-  font-weight: 400;
-  color: var(--dark-shade-grey-40);
-}
-.sidebar-list ul li a {
-  color: var(--dark-shade-grey-40);
-  word-wrap: break-word;
-}
-.sidebar-list ul li a:hover {
-  color: var(--dark-shade-grey-20);
-}
-.sidebar-list ul li.submenu {
-  padding: .3rem .2rem;
-}
-.sidebar-list ul li.submenu.active ul {
-  height: auto;
-  max-height: 9999px;
-  padding-top: .5rem;
-}
-.sidebar-list ul li .submenu-title {
-  position: relative;
-  display: block;
-  font-weight: 500;
-  color: var(--dark-shade-grey-30);
-  cursor: pointer;
-  padding: 0.3rem 0.3rem 0.3rem 2.3rem;
-  border-radius: 3px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.sidebar-list ul li .submenu-title:hover{
-  color: var(--dark-shade-grey-20);
-  background: var(--dark-shade-grey-95);
-}
-
-.sidebar-list ul li .submenu-title:before {
-  position: absolute;
-  display: block;
-  content: "";
-  width: 0;
-  height: 0;
-  top: 8px;
-  left: 10px;
-  right: auto;
-  border-top: 4px solid transparent;
-  border-bottom: 4px solid transparent;
-  border-left: 4px solid var(--dark-shade-light-70);
-}
-.sidebar-list ul li.active .submenu-title:before {
-  border-bottom: 4px solid transparent;
-  border-left: 4px solid transparent;
-  border-right: 4px solid transparent;
-  border-top: 4px solid var(--dark-shade-light-70);
-  top: 12px;
-  left: 10px;
-}
-.sidebar-list ul li .submenu-items {
-  max-height: 0;
-  overflow: hidden;
-}
-.sidebar-list ul li .submenu-items a {
-  position:relative;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  line-height: 1.2;
-  font-weight: normal;
-  text-align: start;
-  white-space: break-spaces;
-  color:var(--blue-500);
-  text-transform: unset;
-  height: unset;
-  display: inline-block;
-  width: calc(100% - 45px);
-}
-.sidebar-list ul li .submenu-items a:focus,
-.sidebar-list ul li .submenu-items a:active {
-  border-style: solid;
-}
-.sidebar-list ul li .submenu-items li.active a {
-  font-weight: 500;
-}
-
-.sidebar-list ul li .method-tag {
-  color: var(--white);
-  font-size: 9px;
-  width: 38px;
-  padding: .3rem 0.3rem;
-  border-radius: 3px;
-  font-weight: 600;
-  font-family: monospace;
-  text-transform: uppercase;
-  text-align: center;
-  display: inline-block;
-}
-.sidebar-list ul li a:before {
-  color: var(--white);
-  font-size: 9px;
-  padding: .28rem .1rem;
-  position: absolute;
-  top: 2px;
-  left: 1rem;
-  border-radius: 3px;
-  font-weight: 600;
-  width: 38px;
-  display: inline-block;
-  text-align: center;
-  font-family: monospace;
-  margin-right: 5px;
-}
-.sidebar-list ul li.method {
-  display: flex;
-  align-items: center;
-}
-.sidebar-list ul li.method div.method-button-wrapper {
-  display: flex;
-  width: 100%;
-  align-items: center;
-}
-
 /* colors below should match kong-portal-templates colors for summary methods */
 .swagger-ui .opblock-summary.opblock-summary-post span.opblock-summary-method,
 .sidebar-list ul li .method-post:before {
@@ -353,85 +164,15 @@
   background-color: var(--blue-background-color);
 }
 /****HERE *****/
-@media all and (max-width: 1200px) {
-  #sidebar {
-    position: fixed;
-    top: 40px;
-    right: 0;
-    transform: translateX(100%);
-    transition: all 400ms ease;
-    z-index: 2;
-  }
-  #sidebar.open {
-    transform: translateX(0);
-  }
-  #sidebar.open .sidebar-menu {
-    height: 100vh;
-    width: 300px;
-    right: 0;
-    border-right: none;
-  }
-
-  .sidebar-toggle {
-    position: fixed;
-    display: flex;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 40px;
-    align-items: center;
-    justify-content: left;
-    background: #eee;
-    z-index: 2;
-    transition: background 300ms ease;
-    cursor: pointer;
-  }
-  .sidebar-toggle:hover {
-    background: #f6f6f6;
-  }
-  .swagger-ui.has-sidebar {
-    margin-top: 40px;
-  }
-  .sidebar-toggle > p {
-    margin: 0 32px;
-  }
-}
-
 @media all and (min-width: 1201px) {
-  .sidebar-toggle {
-    display: none;
-  }
-  .overlay.on {
-    display: none;
-  }
+
   .swagger-ui {
     margin-top: 0;
   }
-  .swagger-ui.has-sidebar {
-    margin-left: 260px;
-  }
+
 }
 
-/* sidebar overlay */
-.overlay {
-  position: fixed;
-  display: none;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.45);
-  z-index: 1;
-}
-.overlay.open {
-  display: block;
-}
 
-@keyframes fadeIn {
-  to {
-    opacity: 1;
-  }
-}
 
 /* main */
 
